--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,9 @@
 }
 
 .green-pink-gradient {
-  background: "#00cea8";
-  background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
-  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+  background: "#a16207";
+  background: linear-gradient(90.13deg, #00cea8 1.9%, #a16207 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #a16207 97.5%);
 }
 
 .orange-text-gradient {
