--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,8 @@
 
 .green-pink-gradient {
   background: "#a16207";
-  background: linear-gradient(90.13deg, #00cea8 1.9%, #a16207 97.5%);
-  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #a16207 97.5%);
+  background: linear-gradient(90.13deg, #a16207 1.9%, #a16207 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #a16207 1.9%, #a16207 97.5%);
 }
 
 .orange-text-gradient {
